css/style.css
/* disable browser css */

*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}

/* general */

html {
  scroll-behavior: smooth;
}

body {
	font-family: 'Courier New', monospace;
	background: #000;
}

/* Hide scrollbar */
html, body {
    /* For Chrome, Safari, and newer versions of Edge */
    &::-webkit-scrollbar {
        display: none;
    }

    /* For Firefox */
    scrollbar-width: none;

    /* For Internet Explorer and older Edge */
    -ms-overflow-style: none;

    /* Ensure scrolling is still enabled */
    overflow-y: scroll; 
}

body h1 {
	font-size: 5vh;
	text-align: center;
	margin: 30px 30px 20px;
	color: #fff;
}

p {
	color: #fff;
	margin: 20px
}

section {
	padding-top: 15vh;
}

hr {
	border: 0;
	width: 40%;
	height: 0.3vh;
	background: linear-gradient(to right, #E506F3, #36E7EA);
	margin: auto
}

img {
	color: #fff
}

/* navbar */
nav {
	display: flex;
	justify-content: space-around;
	align-items: center;
	position: fixed;
	top: 0;
	background: #000;
	height: 15vh;
	width: 100%;
	padding: 20px;
	border-bottom: 0.5vh solid;
	border-image: linear-gradient(to right, #E506F3, #36E7EA) 1;
	z-index: 999;
}

nav button {
	color: #fff;
	background: none;
	border: none;
}

nav img {
	height: 10vh;
	width: auto;
	display: block;
	transform: translateX(8vw);
}

#nav-menu {
	display: flex;
	transform: translateX(12vw);
}

#nav-menu a {
    display: block;
    padding: 10px 15px;
    color: #fff;
	font-size: 3vh;
    text-decoration: none;
	border-bottom: 0.5vh solid #00000000;
}

#nav-menu a:hover {
	border-bottom: 0.5vh solid;
	border-image: linear-gradient(to right, #E506F3, #36E7EA) 1;
}

#sidemenu-open-btn,
#sidemenu-close-btn {
	display: none;
}

#dark-switch,
#light-switch {
	font-size: 5vh;
	margin: 0 5vw;
	width: 1vw;
}

#dark-switch {
	display: none;
	color: #000;
}

/*showcase*/

#showcase {
	height: 100vh;
	width: 100%;
	color: #fff;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background-image: linear-gradient(0deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2)), url('../showcase.jpg');
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	
}

#showcase h1 {
	font-size: 5vh;
}

#showcase a {
	font-size: 3vh;
	color: #fff;
	text-decoration: none;
}

/* Scroll tip */

@keyframes scrolltipanim {
	from {
    	transform: translateY(0);
	}
	to {
		transform: translateY(-10px);
	}
}

@keyframes scrolltipappear {
	from {
    	z-index: -2;
	}
	to {
		z-index: 0;
	}
}

.scroll-tip {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	position: absolute;
	font-size: 24px;
	animation: 
		scrolltipanim 1s infinite alternate,
		scrolltipappear 10s;
	bottom: 20px;
}

.scroll-tip p {
	color: #fff !important;
}

.scroll-tip-arrow {
	width: 40px;
}

/*about*/

#about-info {
	display: flex;
	flex-direction: row;
}

#intro {
	width: 60%;
	line-height: 2;
	font-size: 2.5vh;
	margin: 20px
}

#intro h1 {
	font-family: 'Monaco';
    font-style: normal;
	text-align: start;
	border-bottom: 0.5vh solid;
	border-image: linear-gradient(to right, #E506F3, #36E7EA) 1;
}

/* Showcase ignore theme */

#intro p, #intro h1 {
	color: #fff !important
}

/* Portrait */

#portrait {
	width: 50%;
	max-height: 100%;
	margin: 20px;
	display: flex;
	justify-content: center;
	align-items: center;
}

#portrait img {
	aspect-ratio: 1/1;
	width: 50%;
	border-radius: 100%;
	object-fit: contain;
	background: #fff;
}

/* CV Button */

#cv-button {
	width: 100%;
	display: flex;
	justify-content: center;
}



#cv-button a {
	color: #fff;
	font-size: 30px;
	font-weight: bold;
	text-decoration: none;
	background: #9E98DA;
	padding: 5px 20px;
	margin: 50px;
	border: 5px solid #36E7EA;
	border-radius: 100px;
	transition: 0.5s;
}

#cv-button a:hover {
	cursor: pointer;
	border-color: #E506F3;
	
}

/*skills*/

.skill-logos-row {
	display: flex;
	justify-content: center;
	margin-top: 50px;
	flex-wrap: wrap;
}

.skill-logos-row a img {
	height: 25vh;
	padding: 2vh 3vw
}

/*projects*/

#projects-content {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.project {
	position: relative;
	text-align: center;
	height: 250px;
	width: 300px;
	margin: 40px;
	border-radius: 15px;
	background: #000000;
	transition: 0.3s;
	
}

.project::before {
	content: "";
	position: absolute;
	top: -5px; 
	left: -5px;
	right: -5px;
	bottom: -5px; 
	background: linear-gradient(to right, #E506F3, #36E7EA);
	border-radius: 20px; 
	z-index: -1;
}

.project-info {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	height: 100%;
	padding: 14px 0;
}

.project-links a {
	font-size: 30px;
	color: #36E7EA
}

.project:hover {
	border-color: #E506F3;
}

.project a {
	text-decoration: none;
}

.project a:active {
	text-decoration: none;
}

.project img {
	height: 250px;
	width: 100%;
}

.project h2 {
	color: #fff
}

/*contact*/

#contact {
	color: #fff;
	padding: 40px;
	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../showcase.jpg');
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
}

#contact h2 {
	text-align: center;
	background: #000;
	width: 50%;
	margin-top: 30px;
	padding: 20px;
	border-radius: 20px 20px 0 0;
}

#contact-form {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

form {
	width: 50%;
	padding: 40px;
	background: #000;
	border-radius: 0 0 20px 20px;
}

form input {
	width: 100%;
}

#form-btn {
	width: 100%;
	display: flex;
	justify-content: center;
	transition: 0.3s;

}

#form-btn input {
	color: #fff;
	font-size: 15px;
	font-weight: bold;
	text-decoration: none;
	background: #9E98DA;
	border: 5px solid #36E7EA;
	border-radius: 100px;
	width: 30%;
	max-width: 150px;
	padding: 5px 0;
	margin: 10px 30px;
	transition: 0.2s;
}

#form-btn input:hover {
	cursor: pointer;
	border-color: #E506F3;
}

#name, #email {
	height: 30px;
}

#message {
	height: 100px;
	width: 100%;
}

/* Copy Email */

.copy-email {
	position: relative;
	width: 100%;
	text-align: center;
	top: 15px;
}

.copy-email a {
	color: #36E7EA;
}

.copy-email a {
	color: #36E7EA;
	transition: 0.2s;
}

.copy-email a:hover {
	color: #E506F3;
}

/*footer*/

footer {
	width: 100%;
	display: flex;
	justify-content: space-between;
}

footer img {
	display: block;
	height: 15vh;
	margin: 5vh 3vw 0 3vw;
	object-fit: contain;
}

footer a {
	color: #fff;
	text-decoration: none;
}

#social-media {
	height: 15vh;
	font-size: 3vh;
	margin: 5vh 3vw 0 3vw;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

#social-media a {
	margin: 1vh;
	font-weight: 700;
}

#social-media a:hover {
	color: #36E7EA;
}

#copyright {
	font-size: 2vh;
	text-align: center;
}

